[gd_scene load_steps=2 format=3 uid="uid://cpn2a4s8baxjd"]

[ext_resource type="Script" uid="uid://q0k120a1av5f" path="res://client/game_session.gd" id="1_ib635"]

[node name="GameSession" type="Node"]
script = ExtResource("1_ib635")

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="DisconnectPanel" type="Panel" parent="Overlay"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Overlay/DisconnectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldTransition" type="ColorRect" parent="Overlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="BattleLayer" type="CanvasLayer" parent="."]
